--- a/src/input.css
+++ b/src/input.css
@@ -26,6 +26,11 @@ aside{
   background: lightblue;
 }
 
+.select_plan_active{
+  background:hsl(229, 24%, 87%) ;
+  border: 1px solid hsl(243, 100%, 62%) ;
+}
+
 @media (min-width: 768px) {
   /* Styles for screens that are at least 640px wide (sm breakpoint) */
   aside{
